--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <link href="style/image/boxe/logo-nab.png" rel="icon">
-  <link href="style/css/pages.css" rel="stylesheet">
-  <link href="style/css/index.css" rel="stylesheet">
-  <link href="style/css/style.css" rel="stylesheet">
+  <link href="logo-nab.png" rel="icon">
+  <link href="pages.css" rel="stylesheet">
+  <link href="index.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 
@@ -20,17 +20,17 @@
 <!-- ======= Header ======= -->
 <header id="header" class="fixed-top d-flex align-items-center header-transparent">
     <div class="site-brand">
-      <img id="site-logo" width="100%" height="auto" src="style/image/boxe/logo-nab.png" alt="Logo N.A.B">
+      <img id="site-logo" width="100%" height="auto" src="logo-nab.png" alt="Logo N.A.B">
     </div>
 
     <nav id="navbar" class="navbar order-last order-lg-0">
       <ul>
         <li><a class="nav-link scrollto active" href="index.html"><span>Accueil</span></a></li>
-        <li><a class="nav-link scrollto" href="style/pages/about.html">A Propos</a></li>
-        <li><a class="nav-link scrollto" href="style/pages/activites.html">Nos Activités</a></li>
-        <li><a class="nav-link scrollto" href="style/pages/personnel.html">Personnel</a></li>
-        <li><a class="nav-link scrollto" href="style/pages/galerie.html">Galerie Photos & Vidéos</a></li>
-        <li><a class="nav-link scrollto" href="style/pages/contact.html">Contact</a></li>
+        <li><a class="nav-link scrollto" href="about.html">A Propos</a></li>
+        <li><a class="nav-link scrollto" href="activites.html">Nos Activités</a></li>
+        <li><a class="nav-link scrollto" href="personnel.html">Personnel</a></li>
+        <li><a class="nav-link scrollto" href="galerie.html">Galerie Photos & Vidéos</a></li>
+        <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
       </ul>
     </nav>
 </header>
