--- a/galerie.html
+++ b/galerie.html
@@ -9,10 +9,10 @@
     <meta content="" name="description">
     <meta content="" name="keywords">
 
-    <link href="../image/boxe/logo-nab.png" rel="icon">
-    <link href="../css/pages.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
-    <link href="../css/galerie.css" rel="stylesheet">
+    <link href="logo-nab.png" rel="icon">
+    <link href="pages.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <link href="galerie.css" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 
@@ -20,12 +20,12 @@
 <!-- ======= Header ======= -->
 <header id="header" class="fixed-top d-flex align-items-center header-transparent">
     <div class="site-brand">
-        <img id="site-logo" width="2000" height="2000" src="../image/boxe/logo-nab.png" alt="Logo N.A.B">
+        <img id="site-logo" width="2000" height="2000" src="logo-nab.png" alt="Logo N.A.B">
     </div>
 
     <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-            <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
+            <li><a class="nav-link scrollto active" href="index.html">Accueil</a></li>
             <li><a class="nav-link scrollto" href="about.html">A Propos</a></li>
             <li><a class="nav-link scrollto" href="activites.html">Nos Activités</a></li>
             <li><a class="nav-link scrollto" href="personnel.html">Personnel</a></li>
@@ -56,8 +56,8 @@
 
                 <div class="col-lg-3 col-md-4">
                     <div class="galerie-item">
-                        <a href="../image/boxe/2.jpg" class="gallery-lightbox">
-                            <img src="../image/boxe/2.jpg" alt="" class="img-fluid">
+                        <a href="2.jpg" class="gallery-lightbox">
+                            <img src="2.jpg" alt="" class="img-fluid">
                         </a>
                     </div>
                 </div>
@@ -72,16 +72,16 @@
 
                 <div class="col-lg-3 col-md-4">
                     <div class="galerie-item">
-                        <a href="../image/boxe/3.jpg" class="gallery-lightbox">
-                            <img src="../image/boxe/3.jpg" alt="" class="img-fluid">
+                        <a href="3.jpg" class="gallery-lightbox">
+                            <img src="3.jpg" alt="" class="img-fluid">
                         </a>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-4">
                     <div class="galerie-item">
-                        <a href="../image/boxe/tony.jpg" class="gallery-lightbox">
-                            <img src="../image/boxe/tony.jpg" alt="" class="img-fluid">
+                        <a href="tony.jpg" class="gallery-lightbox">
+                            <img src="tony.jpg" alt="" class="img-fluid">
                         </a>
                     </div>
                 </div>
@@ -96,8 +96,8 @@
 
                 <div class="col-lg-3 col-md-4">
                     <div class="galerie-item">
-                        <a href="../image/boxe/7.jpg" class="gallery-lightbox">
-                            <img src="../image/boxe/7.jpg" alt="" class="img-fluid">
+                        <a href="7.jpg" class="gallery-lightbox">
+                            <img src="7.jpg" alt="" class="img-fluid">
                         </a>
                     </div>
                 </div>
@@ -120,8 +120,8 @@
 
                 <div class="col-lg-3 col-md-4">
                     <div class="galerie-item">
-                        <a href="../image/boxe/9.jpg" class="gallery-lightbox">
-                            <img src="../image/boxe/9.jpg" alt="" class="img-fluid">
+                        <a href="9.jpg" class="gallery-lightbox">
+                            <img src="9.jpg" alt="" class="img-fluid">
                         </a>
                     </div>
                 </div>
@@ -137,16 +137,16 @@
 
                 <div class="col-lg-3 col-md-4">
                     <div class="galerie-item">
-                        <a href="../image/boxe/estelle.jpg" class="gallery-lightbox">
-                            <img src="../image/boxe/estelle.jpg" alt="" class="img-fluid">
+                        <a href="estelle.jpg" class="gallery-lightbox">
+                            <img src="estelle.jpg" alt="" class="img-fluid">
                         </a>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-4">
                     <div class="galerie-item">
-                        <a href="../image/boxe/fond.jpg" class="gallery-lightbox">
-                            <img src="../image/boxe/fond.jpg" alt="" class="img-fluid">
+                        <a href="fond.jpg" class="gallery-lightbox">
+                            <img src="fond.jpg" alt="" class="img-fluid">
                         </a>
                     </div>
                 </div>
@@ -161,8 +161,8 @@
 
                 <div class="col-lg-3 col-md-4">
                     <div class="galerie-item">
-                        <a href="../image/boxe/5.jpg" class="gallery-lightbox">
-                            <img src="../image/boxe/5.jpg" alt="" class="img-fluid">
+                        <a href="5.jpg" class="gallery-lightbox">
+                            <img src="5.jpg" alt="" class="img-fluid">
                         </a>
                     </div>
                 </div>
@@ -185,8 +185,8 @@
 
                 <div class="col-lg-3 col-md-4">
                     <div class="galerie-item">
-                        <a href="../image/boxe/4.jpg" class="gallery-lightbox">
-                            <img src="../image/boxe/4.jpg" alt="" class="img-fluid">
+                        <a href="4.jpg" class="gallery-lightbox">
+                            <img src="4.jpg" alt="" class="img-fluid">
                         </a>
                     </div>
                 </div>
@@ -201,8 +201,8 @@
 
                 <div class="col-lg-3 col-md-4">
                     <div class="galerie-item">
-                        <a href="../image/boxe/24.jpg" class="gallery-lightbox">
-                            <img src="../image/boxe/24.jpg" alt="" class="img-fluid">
+                        <a href="24.jpg" class="gallery-lightbox">
+                            <img src="24.jpg" alt="" class="img-fluid">
                         </a>
                     </div>
                 </div>
