--- a/about.html
+++ b/about.html
@@ -7,10 +7,10 @@
 
     <title>Qui sommes-nous ?</title>
 
-    <link href="../image/boxe/logo-nab.png" rel="icon">
-    <link href="../css/pages.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
-    <link href="../css/about.css" rel="stylesheet">
+    <link href="logo-nab.png" rel="icon">
+    <link href="pages.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <link href="about.css" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 
@@ -18,12 +18,12 @@
 <!-- ======= Header ======= -->
 <header id="header" class="fixed-top d-flex align-items-center header-transparent">
     <div class="site-brand">
-        <img id="site-logo" width="2000" height="2000" src="../image/boxe/logo-nab.png" alt="Logo N.A.B">
+        <img id="site-logo" width="2000" height="2000" src="logo-nab.png" alt="Logo N.A.B">
     </div>
 
     <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-            <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
+            <li><a class="nav-link scrollto active" href="index.html">Accueil</a></li>
             <li><a class="nav-link scrollto" href="about.html">A Propos</a></li>
             <li><a class="nav-link scrollto" href="activites.html">Nos Activités</a></li>
             <li><a class="nav-link scrollto" href="personnel.html">Personnel</a></li>
@@ -42,7 +42,7 @@
                 <h1>QUE PROPOSONS-NOUS ?</h1>
 
                 <div class="col-lg-5 align-items-stretch video-box" >
-                    <iframe width="560" height="315" poster="../image/boxe/about.jpg" src="https://www.youtube.com/embed/HJLKx6tmUeE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" poster="about.jpg" src="https://www.youtube.com/embed/HJLKx6tmUeE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
 
                 <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch">
